# scop-demo

./: .editorconfig  .gitignore  .importlinter  README.md  package.json  pyproject.toml  scop.toml
docs/: ARCHITECTURE.md  CLI_CONTRACT.md  SCOP.md  SCOP_M.md  ZEN.md
rules/: ad_hoc.yml  adapter-class-convention.yml  adapter-must-declare-port.yml  app-class-convention.yml  conventions.yml  edge_contracts.yml  import_allowlist.yml  msgid-must-use-enum.yml  no-argparse-outside-cli.yml  no-sys-exit-outside-cli.yml  one-class-per-role-file.yml  port-class-convention.yml  protocol_contracts.yml  service-class-convention.yml  utils-allowlist.yml  zen.yml
scop/: bases.py  cli.py  clig.py  gui.py  html.py  mui.py  tui.py  ui.py
scop/adapters/: __init__.py  config_adapter.py  runtime_adapter.py  snapshot_adapter.py
scop/app/: __init__.py  bases.py  dispatcher.py  runtime.py  stream.py
scop/app/registry/: builder.py  config_app.py  diff_app.py  log_app.py  restore_app.py  root_app.py  snap_app.py  status_app.py
scop/framework/: __init__.py
scop/models/: __init__.py  bases.py  config.py  manifest.py  messages.py  ndjson.py  protocol.py  results.py  snapshot.py
scop/models/schemas/: scop.manifest.schema.json
scop/ports/: __init__.py  config_port.py  runtime_port.py  snapshot_port.py  stream.py  stream_port.py  streaming_result.py
scop/protocol/: __init__.py  results.py
scop/services/: __init__.py  config_set_service.py  config_show_service.py  config_status_service.py  create_snapshot_service.py  diff_snapshots_service.py  list_snapshots_service.py  restore_snapshot_service.py  snapshot_service.py  snapshot_status_service.py
scop/utils/: __init__.py  code.py  concurrent.py  proc.py
scop/utils/proc/: __init__.py
scripts/: generate.manifest.py  generate.manifest_schema.py
static/: config.toml
static/templates/: base.html  message.html  page.html
static/templates/partials/: form_inputs.html  lists.html  mui.css  nav.html  scalars.html  tables.html
tests/: conftest.py
tests/architecture/: test_naming_conventions.py  test_rule_11_depth_imports.py  test_scop_contract.py  todo.test_rule_1.py  todo.test_rule_7.py
tests/integration/: test_lint.py  test_manifest_drift.py  test_manifest_model.py
tests/unit/: test_scop.py
