[project]
name = "scop"
version = "0.1.0"
description = ""
authors = [
    { name = "BinaryBand", email = "BinaryBand@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
scop = "scop.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = ["import-linter", "ast-grep-cli", "ruff", "ty"]

[tool.ruff]
target-version = "py311"
line-length = 100
preview = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["RUF", "E", "F", "W", "I", "N", "A", "B", "S"] # "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]              # Tests use `assert` idiomatically
"tests/conftest.py" = ["S101"]          # conftest _fix() runs trusted dev tools
"scop/models/bases.py" = ["B024"]       # Port is an intentional marker base
"scop/utils/proc.py" = ["S404", "S603"] # subprocess shim — shell never used

[tool.ty.environment]
python-version = "3.11"
extra-paths = []
root = ["."]

[tool.ty.rules]
possibly-missing-import = "error"
unresolved-import = "error"

[tool.ty.src]
include = ["scop", "tests"]

[tool.ty.terminal]
error-on-warning = true
output-format = "full"

[dependency-groups]
dev = ["pytest (>=9.0.3,<10.0.0)"]
