[project]
name = "scop"
version = "0.1.0"
description = ""
authors = [
    { name = "BinaryBand", email = "BinaryBand@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "rich (>=15.0.0,<16.0.0)",
    "textual (>=3.0) ; python_version >= \"3.11\" and python_version < \"4.0\"",
    "flask (>=3.0,<4.0)",
    "pydantic (>=2.8,<3.0)",
    "tqdm (>=4.0)",
]

[project.scripts]
scop = "scop.cli:main"
scop-tui = "scop.tui:main"
scop-gui = "scop.gui:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
preview = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "ANN",  # type annotations
    "RUF",  # ruff-specific
    "T",    # ban print
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "A",    # shadowed builtins
    "B",    # bugbear
    "S",    # security
    "UP",   # modern Python syntax
    "FURB", # idiomatic Python patterns
    "SIM",  # simplify conditions and code
    "RET",  # consistent returns
    "PTH",  # pathlib over os.path
    "ERA",  # no commented-out code
    "PGH",  # no bare type: ignore
    "C4",   # comprehension style
    "PIE",  # unnecessary patterns
    "TID",  # banned-api + import rules
    "PERF", # performance anti-patterns
    "ISC",  # implicit string concatenation
    "ARG",  # unused arguments
    "FA",   # require from __future__ import annotations
    "DTZ",  # datetime timezone awareness
    # D (docstrings) High noise on a new project; add later
    # FBT (boolean trap) Very noisy, lots of legitimate bools
    # EM (exception messages) Prescriptive about string formatting in raises
    # PL (pylint full set) Too broad, many conflicts with existing rules
    # TCH deliberately omitted — TYPE_CHECKING is banned
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TYPE_CHECKING".msg = "All imports must work at runtime — use 'from __future__ import annotations' for forward references instead"
"httpx".msg = "HTTP belongs in utils/net only"
"yaml".msg = "YAML serialisation belongs in utils/fmt only"
"tomli".msg = "TOML parsing belongs in utils/fmt only"
"cryptography".msg = "Encryption belongs in utils/crypto only"
"pydantic".msg = "Pydantic models belong in models/ only"
"rich".msg = "TUI rendering belongs in tui.py only"
"textual".msg = "TUI rendering belongs in tui.py only"
"tqdm".msg = "CLI progress rendering belongs in cli.py only"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
] # Tests use `assert` idiomatically; unused-arg false-positives on fixtures
"tests/conftest.py" = ["S101"] # conftest _fix() runs trusted dev tools
# TID251 carve-outs — third-party allowed only in the one declared submodule
"scop/utils/net.py" = ["TID251"]
"scop/utils/net/**/*.py" = ["TID251"]
"scop/utils/fmt.py" = ["TID251"]
"scop/utils/fmt/**/*.py" = ["TID251"]
"scop/utils/crypto.py" = ["TID251"]
"scop/utils/crypto/**/*.py" = ["TID251"]
"scop/models/**/*.py" = ["TID251"]
"scop/tui.py" = ["TID251", "S404", "S603", "S602"]
"scop/cli.py" = ["TID251"]
"scop/bases.py" = [
    "B024",
    "ANN001",
] # Marker bases — stream annotation pending (see docs/TODO Rule 6)
"scop/utils/proc.py" = ["S404", "S603"] # subprocess shim — shell never used
"scop/app/registry/diff_app.py" = [
    "ARG002",
] # Shell — args contract from BaseApp, not yet used
"scop/app/registry/log_app.py" = [
    "ARG002",
] # Shell — args contract from BaseApp, not yet used
"scop/app/registry/restore_app.py" = [
    "ARG002",
] # Shell — args contract from BaseApp, not yet used
"scop/app/registry/status_app.py" = [
    "ARG002",
] # Shell — args contract from BaseApp, not yet used

[tool.ty.environment]
python-version = "3.11"
extra-paths = []
root = ["."]

[tool.ty.rules]
possibly-missing-import = "error"
unresolved-import = "error"

[tool.ty.src]
include = ["scop", "tests"]

[tool.ty.terminal]
error-on-warning = true
output-format = "full"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "import-linter",
    "ast-grep-cli",
    "ruff",
    "ty",
]
